docs/pages/versions/v55.0.0/sdk/linear-gradient.mdx
---
title: LinearGradient
description: 一个通用的 React 组件，用于渲染渐变视图。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-linear-gradient'
packageName: 'expo-linear-gradient'
iconUrl: '/static/images/packages/expo-linear-gradient.png'
platforms: ['android', 'ios', 'tvos', 'web', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { SnackInline } from '~/ui/components/Snippet';

`expo-linear-gradient` 提供了一个原生 React 视图，可在线性方向上实现多种颜色之间的过渡。

> **info** React Native 还在 `View` 组件上提供了 `experimental_backgroundImage`（Android 和 iOS）以及 `backgroundImage`（Web）样式属性，支持 CSS 渐变语法，例如 [`linear-gradient()`](https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/gradient/linear-gradient) 和 [`radial-gradient()`](https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/gradient/radial-gradient)。这可以作为渐变背景的替代方案，而无需添加额外依赖。由于这是一个实验性属性，如果你遇到任何问题，请[将它们报告到 React Native 仓库](https://github.com/facebook/react-native/issues)。

## 安装

<APIInstallSection />

## 用法

<SnackInline label='Linear Gradient' dependencies={['expo-linear-gradient']}>

```tsx
import { StyleSheet, Text, View } from 'react-native';
import { LinearGradient } from 'expo-linear-gradient';

export default function App() {
  return (
    <View style={styles.container}>
      <LinearGradient
        // 背景线性渐变
        colors={['rgba(0,0,0,0.8)', 'transparent']}
        style={styles.background}
      />
      <LinearGradient
        // 按钮线性渐变
        colors={['#4c669f', '#3b5998', '#192f6a']}
        style={styles.button}>
        <Text style={styles.text}>使用 Facebook 登录</Text>
      </LinearGradient>
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    alignItems: 'center',
    justifyContent: 'center',
    backgroundColor: 'orange',
  },
  background: {
    position: 'absolute',
    left: 0,
    right: 0,
    top: 0,
    height: 300,
  },
  button: {
    padding: 15,
    alignItems: 'center',
    borderRadius: 5,
  },
  text: {
    backgroundColor: 'transparent',
    fontSize: 15,
    color: '#fff',
  },
});
```

</SnackInline>

## API

```js
import { LinearGradient } from 'expo-linear-gradient';
```

<APISection packageName="expo-linear-gradient" />
